--- a/app/index-ratchet.html
+++ b/app/index-ratchet.html
@@ -56,22 +56,31 @@
         <div class="input-group">
           <div class="input-row">
             <label>Master Password</label>
-            <input type="password" placeholder='Password'>
+            <input type="password" placeholder='Password' id='master-password-field'>
           </div>
           <div class="input-row">
-            <label>Site URL</label>
-            <input type="url" placeholder="http://example.com">
+            <label>URL</label>
+            <input type="url" value="http://example.com" id='url-field'>
           </div>
           <div class="input-row">
             <label>Generated Password</label>
-            <input type="text" placeholder='890abcef'>
+            <input type="text" placeholder='890abcef' id='hash-field'>
           </div>
         </div>
+        <p id='site-hint'>
+          <small></small>
+        </p>
       </form>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
+
+    <!-- build:js scripts/scripts.js -->
+    <script src="/scripts/vendor/md5.js"></script>
+    <script src="/scripts/vendor/URI.min.js"></script>
+    <script src="/scripts/main.js"></script>
+    <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
