--- a/app/index.html
+++ b/app/index.html
@@ -67,10 +67,10 @@
             <input type="text" placeholder='890abcef' id='hash-field'>
           </div>
         </div>
-          <div class="input-row">
-            <label id='site-hint'></label>
-          </div>
       </form>
+      <div class="content-padded">
+        <label id='site-hint'></label>
+      </div>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
