updates with link to source

--- a/app/info.html
+++ b/app/info.html
@@ -57,6 +57,9 @@
             <p>Then just hit <i>return</i> and copy your new password so you can paste it into whatever site you&#39;re registering at. It&#39;ll be different for every site, and undiscoverable by anyone who doesn&#39;t know your master password &#151; but you can always retrieve it by simply using this form again.</p>
             <p>(Note that all this is done by your browser running the program that's in the source of this page; nothing is passed back to my server. You can make your own local copy of this page, use it off-line, &c.)</p>
         </blockquote>
+        <p>
+            The source is [available on Github](https://github.com/tansengming/passgen).
+        </p>
       </div>
     </div>
 
