uses bower for URI js

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/ratchet/dist/css/ratchet.css">
+    <link rel="stylesheet" href="../bower_components/ratchet/dist/css/ratchet.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -88,10 +88,10 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/ratchet/dist/js/ratchet.js"></script>
+    <script src="../bower_components/ratchet/dist/js/ratchet.js"></script>
+    <script src="../bower_components/urijs/src/URI.js"></script>
     <!-- endbower -->
     <script src="scripts/vendor/md5.js"></script>
-    <script src="scripts/vendor/URI.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/scripts.js -->
