--- a/app/info.html
+++ b/app/info.html
@@ -66,9 +66,15 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
 
-    <!-- build:js scripts/scripts.js -->
+    <!-- build:js scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="../bower_components/ratchet/dist/js/ratchet.js"></script>
+    <script src="../bower_components/urijs/src/URI.js"></script>
+    <!-- endbower -->
     <script src="scripts/vendor/md5.js"></script>
-    <script src="scripts/vendor/URI.min.js"></script>
+    <!-- endbuild -->
+
+    <!-- build:js scripts/scripts.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
