--- a/app/index.html
+++ b/app/index.html
@@ -48,13 +48,10 @@
   <body>
 
     <!-- Make sure all your bars are the first things in your <body> -->
-    <header class="bar-title">
+    <header class="bar bar-nav">
+      <a class="icon icon-info pull-right" href='info.html'></a>
       <h1 class="title">Passgen</h1>
-      <a class='button' href='info.html'>Help</a>
     </header>
-
-    <footer class="bar-footer">
-    </footer>
 
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
     <div class="content">
