--- a/app/info.html
+++ b/app/info.html
@@ -15,33 +15,11 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-precomposed.png">
-
-    <!-- build:css styles/screen.css -->
-    <link rel="stylesheet" href="components/ratchet/dist/ratchet.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-
-    <!-- build:js scripts/heads.js -->
-    <script src="scripts/vendor/modernizr.min.js"></script>
-    <script src="components/ratchet/dist/ratchet.js"></script>
-    <!-- endbuild -->
-
-    <!-- Intro paragraph styles. Delete once you start using this page -->
-    <style type="text/css">
-        .welcome {
-          line-height: 1.5;
-          color: #555;
-        }
-    </style>
-
   </head>
   <body>
-
     <!-- Make sure all your bars are the first things in your <body> -->
-    <header class="bar-title">
-      <a class="button-prev" href="index.html" data-ignore="push">
-        Back
-      </a>
+    <header class="bar bar-nav">
+      <a class="icon icon-left-nav pull-left" href='/'></a>
       <h1 class="title">Passgen</h1>
     </header>
 
@@ -58,31 +36,9 @@
             <p>(Note that all this is done by your browser running the program that's in the source of this page; nothing is passed back to my server. You can make your own local copy of this page, use it off-line, &c.)</p>
         </blockquote>
         <p>
-            The source is [available on Github](https://github.com/tansengming/passgen).
+            The source is <a href='https://github.com/tansengming/passgen'>available on Github</a>.
         </p>
       </div>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
-
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/ratchet/dist/js/ratchet.js"></script>
-    <script src="../bower_components/urijs/src/URI.js"></script>
-    <!-- endbower -->
-    <script src="scripts/vendor/md5.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js scripts/scripts.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
-
-    <script>
-        var _gaq=[['_setAccount','UA-2279020-7'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
   </body>
 </html>
