--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/ratchet/dist/css/ratchet.css" />
+    <link rel="stylesheet" href="../bower_components/ratchet/dist/css/ratchet-theme-ios.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
