--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
     <div class="content">
       <div class="content-padded">
-        <p class="welcome">Choose one master password to secure all your others and generate passwords for each site</p>
+        <p class="welcome">Pick a master password to generate passwords for other sites</p>
       </div>
 
       <form>
