--- a/app/info.html
+++ b/app/info.html
@@ -19,7 +19,12 @@
   <body>
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <a class="icon icon-left-nav pull-left" href='/'></a>
+      <button class="btn btn-link btn-nav pull-left">
+        <a href='/'>
+          <span class="icon icon-left-nav"></span>
+          Back
+        </a>
+      </button>
       <h1 class="title">Passgen</h1>
     </header>
 
