--- a/app/index.html
+++ b/app/index.html
@@ -86,8 +86,8 @@
     <!-- bower:js -->
     <script src="../bower_components/ratchet/dist/js/ratchet.js"></script>
     <script src="../bower_components/urijs/src/URI.js"></script>
+    <script src="../bower_components/js-md5/js/md5.js"></script>
     <!-- endbower -->
-    <script src="scripts/vendor/md5.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/scripts.js -->
