--- a/app/index.html
+++ b/app/index.html
@@ -79,11 +79,9 @@
       </div>
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
-
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/ratchet/dist/js/ratchet.js"></script>
     <script src="../bower_components/urijs/src/URI.js"></script>
     <script src="../bower_components/js-md5/js/md5.js"></script>
