modernizr to bower

--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,11 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/heads.js -->
-    <script src="scripts/vendor/modernizr.min.js"></script>
+    <!-- bower:js -->
+    <script src="../bower_components/modernizr/modernizr.js"></script>
+    <!-- endbower -->
     <!-- endbuild -->
+
 
     <!-- Intro paragraph styles. Delete once you start using this page -->
     <style type="text/css">
