resize password labels if too small
fixes #7

--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 
       <form class="input-group">
         <div class="input-row">
-          <label>Master Password</label>
+          <label class='long'>Master Password</label>
           <input type="password" placeholder='Password' id='master-password-field'>
         </div>
         <div class="input-row">
@@ -73,12 +73,12 @@
           <input type="url" value="http://example.com" id='url-field'>
         </div>
         <div class="input-row">
-          <label>Generated Password</label>
+          <label class='long'>Generated Password</label>
           <input type="text" placeholder='890abcef' id='hash-field' readonly="true">
         </div>
       </form>
       <div class="content-padded">
-        <label id='site-hint'></label>
+        <p id='site-hint'></p>
       </div>
     </div>
 
