adds legacy mode

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,14 @@
       </form>
       <div class="content-padded">
         <p id='site-hint'></p>
+        <ul class="table-view">
+          <li class="table-view-cell">
+            Legacy Mode
+            <div class="toggle" id='legacyToggle'>
+              <div class="toggle-handle"></div>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
 
