--- a/app/info.html
+++ b/app/info.html
@@ -20,7 +20,7 @@
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
       <button class="btn btn-link btn-nav pull-left">
-        <a href='/'>
+        <a href='../'>
           <span class="icon icon-left-nav"></span>
           Back
         </a>
