--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
     <div class="content">
       <div class="content-padded">
-        <p class="welcome">Pick a master password to generate passwords for other sites</p>
+        <p class="welcome">Use a master password to generate passwords for all sites</p>
       </div>
 
       <form class="input-group">
