replaces checkbox with full buttons

--- a/app/index.html
+++ b/app/index.html
@@ -85,11 +85,12 @@
                 <input type="text" class="form-control" id="hash-field" placeholder="e7a-c07-866-68e">
               </div>
             </div>
+            <p id='site-hint'></p>
             <div class="form-group">
               <div class="col-xs-12">
-                <div class="checkbox pull-right">
-                  <label>
-                    <input type="checkbox" id="legacyToggle"> Legacy Mode
+                <div class="btn-group pull-right" data-toggle="buttons">
+                  <label class="btn btn-primary">
+                    <input type="checkbox" autocomplete="off" id="legacyToggle"> Legacy Mode
                   </label>
                 </div>
               </div>
