smaller hint font

--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
                 <input type="text" class="form-control" id="hash-field" placeholder="e7a-c07-866-68e">
               </div>
             </div>
-            <p id='site-hint'></p>
+            <p id='site-hint' class="small"></p>
             <div class="form-group">
               <div class="col-xs-12">
                 <div class="btn-group pull-right" data-toggle="buttons">
