--- a/app/index.html
+++ b/app/index.html
@@ -52,8 +52,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#about" data-toggle="modal" data-target="#about">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -99,6 +98,35 @@
         </div>
       </div>
     </div><!-- /.container -->
+
+    <!-- About Page -->
+    <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">About</h4>
+          </div>
+          <div class="modal-body">
+            <p>
+                This is adapted from <a href='http://angel.net/~nic/passwd.html' data-ignore="push">Nic Wolff's Password Generator</a> so perhaps its best if I let him explain what it is.
+            </p>
+            <blockquote>
+                <p><em>I hate passwords.</em> I mean, I don&#39;t mind having really important ones be made-up and memorized but what about all those e-commerce and community sites that want me to create accounts? I end up using the same password at all of them and then I feel stupid knowing that one SQL Server exploit or disgruntled admin could cost me my whole identity.</p>
+                <p>So, this is a little Javascript program that will concatenate two fields and MD5 them. The idea is that you choose one master password to secure all your others, and then generate passwords for each site, server, router, &amp;c. by putting a completely obvious name for that resource in the "Site name" field.</p>
+                <p>Then just hit <i>return</i> and copy your new password so you can paste it into whatever site you&#39;re registering at. It&#39;ll be different for every site, and undiscoverable by anyone who doesn&#39;t know your master password &#151; but you can always retrieve it by simply using this form again.</p>
+                <p>(Note that all this is done by your browser running the program that's in the source of this page; nothing is passed back to my server. You can make your own local copy of this page, use it off-line, &c.)</p>
+            </blockquote>
+            <p>
+                The source is <a href='https://github.com/tansengming/passgen'>available on Github</a>.
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <!-- build:js scripts/vendor.js -->
