--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,13 @@
     <!-- <script src="../bower_components/modernizr/modernizr.js"></script> -->
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script>
+        var _gaq=[['_setAccount','UA-2279020-7'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
   </head>
 
   <body>
