cleanup about page

--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="modal-body">
             <p>
-                This is adapted from <a href='http://angel.net/~nic/passwd.html' data-ignore="push">Nic Wolff's Password Generator</a> so perhaps its best if I let him explain what it is.
+                This is adapted from <a href='http://angel.net/~nic/passwd.html'>Nic Wolff's Password Generator</a> so perhaps its best if I let him explain what it is.
             </p>
             <blockquote>
                 <p><em>I hate passwords.</em> I mean, I don&#39;t mind having really important ones be made-up and memorized but what about all those e-commerce and community sites that want me to create accounts? I end up using the same password at all of them and then I feel stupid knowing that one SQL Server exploit or disgruntled admin could cost me my whole identity.</p>
