--- a/index.html
+++ b/index.html
@@ -18,21 +18,11 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-precomposed.png">
 
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="./bootstrap-spaceship/css/bootstrap.min.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
+    <link rel="stylesheet" href="styles/vendor.css">
 
-    <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
 
-    <!-- build:js scripts/heads.js -->
-    <!-- bower:js -->
-    <!-- <script src="../bower_components/modernizr/modernizr.js"></script> -->
-    <!-- endbower -->
-    <!-- endbuild -->
+    <script src="scripts/heads.js"></script>
 
     <script>
         var _gaq=[['_setAccount','UA-2279020-7'],['_trackPageview']];
@@ -137,19 +127,8 @@
       </div>
     </div>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="../bower_components/urijs/src/URI.js"></script>
-    <script src="../bower_components/crypto-js/core.js"></script>
-    <script src="../bower_components/crypto-js/sha256.js"></script>
-    <script src="../bower_components/crypto-js/md5.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+    <script src="scripts/vendor.js"></script>
 
-    <!-- build:js scripts/scripts.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+    <script src="scripts/scripts.js"></script>
   </body>
 </html>
