--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>Passgen</title>
 
@@ -18,21 +17,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-precomposed.png">
 
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="./bootstrap-spaceship/css/bootstrap.min.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-
-    <!-- build:js scripts/heads.js -->
-    <!-- bower:js -->
+    <!-- <link rel="stylesheet" href="./bootstrap-spaceship/css/bootstrap.min.css" /> -->
+    <!-- <link rel="stylesheet" href="styles/main.css"> -->
     <!-- <script src="../bower_components/modernizr/modernizr.js"></script> -->
-    <!-- endbower -->
-    <!-- endbuild -->
 
     <script>
         var _gaq=[['_setAccount','UA-2279020-7'],['_trackPageview']];
