disable old bower requires

--- a/src/index.html
+++ b/src/index.html
@@ -124,19 +124,10 @@
       </div>
     </div>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="../bower_components/urijs/src/URI.js"></script>
-    <script src="../bower_components/crypto-js/core.js"></script>
-    <script src="../bower_components/crypto-js/sha256.js"></script>
-    <script src="../bower_components/crypto-js/md5.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js scripts/scripts.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+    <!-- <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script> -->
+    <!-- <script src="../bower_components/urijs/src/URI.js"></script> -->
+    <!-- <script src="../bower_components/crypto-js/core.js"></script> -->
+    <!-- <script src="../bower_components/crypto-js/sha256.js"></script> -->
+    <!-- <script src="../bower_components/crypto-js/md5.js"></script> -->
   </body>
 </html>
